# coptr

./: .coptr-env-readthedocs.yml  .gitignore  .readthedocs.yml  README.md  coptr-env.yml  coptr.py  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  databases.rst  index.rst  installation.rst  modules.rst  quick-start.rst  tutorial.rst
src/: bam_processor.py  compute_read_counts.py  coptr_contig.py  coptr_ref.py  poisson_pca.py  print.py  read_assigner.py  read_mapper.py  util.py
src/coptr/: bam_processor.py  cli.py  compute_read_counts.py  compute_rel_abun.py  coptr_contig.py  coptr_ref.py  poisson_pca.py  print.py  read_assigner.py  read_mapper.py  util.py
test/: e-coli-NZ_CP011495.1.pkl  test_bam_processor.py  test_coordinate_map.py  test_coptr.py
