[metadata]
name = coptr
url = https://github.com/tyjo/coptr
download_url = https://pypi.org/project/coptr/
project_urls =
    Source Code = https://github.com/tyjo/coptr
    Documentation = https://coptr.readthedocs.io
    Bug Tracker = https://github.com/tyjo/coptr/issues
author = Tyler
author_email = ?
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = GPL-3.0-or-later
description = ?
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    growth rate
    peak-to-trough ratio

[options]
zip_safe = True
install_requires =
    numpy
    pysam
    scipy
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.entry_points]
console_scripts =
    coptr = coptr.cli:ProgramOptions

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
