[metadata]
name = coptr
version = attr: coptr.__version__
url = https://github.com/tyjo/coptr
download_url = https://pypi.org/project/coptr/
project_urls =
    Source Code = https://github.com/tyjo/coptr
    Documentation = https://coptr.readthedocs.io
    Bug Tracker = https://github.com/tyjo/coptr/issues
author = Tyler Joseph
author_email = tj2357@columbia.edu
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = GPL-3.0-or-later
description = Accurate and robust inference of microbial growth dynamics from metagenomic sequencing reads.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    growth rate
    peak-to-trough ratio

[options]
zip_safe = True
install_requires =
    numpy >= 1.19.1
    pysam >= 0.16.0.1
    scipy >= 1.5.2
    matplotlib >= 3.3.2
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.entry_points]
console_scripts =
    coptr = coptr.cli:cli

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
